# Rask

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Rask.kdev4  runAcceptanceTests.sh  runUnitTests.sh  todo.txt
rask/: InputStream.cpp  InputStream.hpp  Operators.cpp  Operators.hpp  Position.cpp  Position.hpp  null.hpp
rask/ast/: BasicType.hpp  Builder.hpp  BuiltinFunction.hpp  BuiltinFunctions.cpp  BuiltinFunctions.hpp  Constant.hpp  CustomFunction.hpp  Expression.cpp  Expression.hpp  Function.hpp  FunctionCall.hpp  FunctionDecl.hpp  FunctionTable.hpp  FunctionVisitor.hpp  Operators.hpp  Return.hpp  Scope.hpp  Statement.hpp  SymbolTable.hpp  Tree.hpp  VarDecl.hpp  Variable.hpp  VariableDecl.hpp  buildAST.cpp  buildAST.hpp  buildChainExpression.cpp  buildExpression.cpp  buildFunction.cpp  buildFunctionAST.cpp  buildFunctionAST.hpp  buildFunctionCall.cpp  buildFunctionDecl.cpp  buildReturn.cpp  buildTree.cpp  buildUnaryOperatorCall.cpp  buildVarDecl.cpp  buildVariableDecl.cpp  operatorName.hpp  parseFunction.cpp  parseFunction.hpp
rask/cg/: BasicBlockFactory.cpp  BasicBlockFactory.hpp  CodeGenerator.cpp  CodeGenerator.hpp  InstructionFactory.cpp  InstructionFactory.hpp  Prefixes.cpp  Prefixes.hpp  SymbolTable.hpp  TypeFactory.cpp  TypeFactory.hpp  declBuiltinFunctions.cpp  declFunction.cpp  genFunction.cpp  genFunction.hpp  genFunctionCall.cpp  genFunctionIR.cpp  genFunctionIR.hpp  genModule.cpp  genReturn.cpp  genValue.cpp  genVarDecl.cpp  genVariableDecl.cpp
rask/cst/: Constant.hpp  Expression.hpp  Function.hpp  FunctionCall.hpp  Grammar.hpp  Identifier.hpp  Optimizer.cpp  Optimizer.hpp  Parser.cpp  Parser.hpp  Return.hpp  Statement.hpp  Tree.hpp  VarDecl.hpp  VariableDecl.hpp  parseFile.cpp  parseFile.hpp  parseMain.cpp  parseMain.hpp
rask/error/: Logger.hpp  Message.cpp  Message.hpp
rask/main/: rask.cpp  raskc.cpp  ut.cpp
rask/test/: Console.cpp  Console.hpp  FunctionFactory.cpp  FunctionFactory.hpp  GTestController.cpp  GTestController.hpp  GTestPrinter.cpp  GTestPrinter.hpp  Mock.hpp  TUTAssert.hpp  VariableDeclFactory.cpp  VariableDeclFactory.hpp  VariableFactory.cpp  VariableFactory.hpp
rask/ut/: InputStreamUT.cpp  PositionUT.cpp  nullUT.cpp  tut_color_console_reporter.hpp
rask/ut/ast/: BuiltinFunctionUT.cpp  BuiltinFunctionsUT.cpp  ConstantUT.cpp  CustomFunctionUT.cpp  ExpressionUT.cpp  FunctionTableUT.cpp  FunctionUT.cpp  OperatorsUT.cpp  ScopeMock.hpp  ScopeMockNew.hpp  ScopeUT.cpp  SymbolTableUT.cpp  TreeUT.cpp  VariableFactoryMock.hpp  VariableFactoryMockNew.hpp  buildASTUT.cpp  buildChainExpressionUT.cpp  buildExpressionUT.cpp  buildFunctionCallUT.cpp  buildFunctionDeclUT.cpp  buildFunctionUT.cpp  buildReturnUT.cpp  buildTreeUT.cpp  buildUnaryExpressionUT.cpp  buildUnaryOperatorCallUT.cpp  buildVarDeclUT.cpp  buildVariableDeclUT.cpp  operatorNameUT.cpp  parseFunctionUT.cpp
rask/ut/cg/: BasicBlockFactoryMock.hpp  InstructionFactoryMock.hpp  SymbolTableUT.cpp  TypeFactoryUT.cpp  declBuiltinFunctionsUT.cpp  declFunctionUT.cpp  genFunctionCallUT.cpp  genFunctionIRUT.cpp  genFunctionUT.cpp  genModuleUT.cpp  genReturnUT.cpp  genValueUT.cpp  genVarDeclUT.cpp  genVariableDeclUT.cpp
rask/ut/cst/: OperatorStubs.hpp  OptimizerUT.cpp  ParserUT.cpp  parseFileUT.cpp  parseMainUT.cpp
rask/ut/error/: LoggerUT.cpp  MessageUT.cpp
rask/ut/test/: MockUT.cpp
sl/main/: ut.cpp
test/: runTests.sh
test/testBool/: badAdd1.out  badAdd1.rask  badAdd2.out  badAdd2.rask  badAdd3.out  badAdd3.rask  badDiv1.out  badDiv1.rask  badDiv2.out  badDiv2.rask  badDiv3.out  badDiv3.rask  badMod1.out  badMod1.rask  badMod2.out  badMod2.rask  badMod3.out  badMod3.rask  badMul1.out  badMul1.rask  badMul2.out  badMul2.rask  badMul3.out  badMul3.rask  badSub1.out  badSub1.rask  badSub2.out  badSub2.rask  badSub3.out  badSub3.rask  funcArg.rask  funcRet.rask  imm.rask  list  var.rask
test/testFunc/: func1.out  func1.rask  func10.out  func10.rask  func2.rask  func3.out  func3.rask  func4.out  func4.rask  func5.rask  func6.rask  func7.out  func7.rask  func8.out  func8.rask  func9.rask  list
test/testGet/: get1.rask  list
test/testMain/: list  main1.rask  main2.out  main3.out  main3.rask  main4.out  main4.rask  main5.out  main5.rask  main6.out  main6.rask  main7.out  main7.rask  main8.out  main8.rask  main9.out  main9.rask
test/testOp/: addFunc.rask  addImm.rask  addMisc.rask  addMisc1.out  addMisc2.out  addVar.rask  addVar2.out  divFunc.rask  divImm.rask  divMisc.rask  divMisc1.in  divMisc1.out  divMisc2.in  divMisc2.out  divVar.rask  divVar1.in  divVar2.in  list  modFunc.rask  modImm.out  modImm.rask  modMisc.in  modMisc.out  modMisc.rask  modVar.rask  modVar1.in  modVar2.in  mulFunc.rask  mulImm.out  mulImm.rask  mulMisc.rask  mulMisc1.in  mulMisc1.out  mulMisc2.in  mulMisc2.out  mulVar.rask  negFunc.rask  negVar.rask  parMisc.out  parMisc.rask  (+25 more)
test/testPrint/: list  print1.out  print1.rask  print2.out  print2.rask  print3.out  print3.rask  print4.out  print4.rask  print4b.out  print4b.rask  print5.out  print5.rask  print6.out  print6.rask  print7.out  print7.rask
test/testVar/: list  var1.out  var1.rask  var2.out  var2.rask  var3.rask  var4.out  var4.rask
tools/: grep-llvm-symbol.sh  make-wiki-page.sh  make_ut.sh
tools/CodeWizard/: CodeWizard.py
tools/test/: keywords.rask  keywords.wiki  list  simple1.rask  simple1.wiki  simple2.rask  simple2.wiki  simple3.out  simple3.wiki  simple4.wiki  test-make-wiki-page.sh
vs10/: Rask.sln  UT.vcxproj  UT.vcxproj.filters  rask.vcxproj  rask.vcxproj.filters  raskc.vcxproj  raskc.vcxproj.filters  rasklib.vcxproj  rasklib.vcxproj.filters
